# Simple-Test

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
project/: OpenGL.cpp  OpenGL.h  OpenGLBindings.h  OpenGLExtensions.h  RenderEvent.cpp  RenderEvent.h  SDLApplication.cpp  SDLApplication.h  SDLWindow.cpp  SDLWindow.h  Window.h  main.cpp
project/app/: Application.h
project/ui/: Window.h
